platform/minio/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console
  namespace: minio
  annotations:
    argocd.argoproj.io/ignore-healthcheck: "true"
spec:
  parentRefs:
    - name: shared
      namespace: gateway
  hostnames:
    - minio.192.168.1.27.nip.io
  rules:
    - backendRefs:
        - name: minio-console
          port: 9001
